Bug 495918 - batterymonitor applet cannot detect TLP
Summary: batterymonitor applet cannot detect TLP
Status: RESOLVED FIXED
Alias: None
Product: Powerdevil
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 6.2.3
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2024-11-07 11:21 UTC by Li Jiajun
Modified: 2024-11-19 21:42 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.2.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Li Jiajun 2024-11-07 11:21:01 UTC
SUMMARY
As of plasma 6.2.3, there is a regression causing the function cannot determine whether tlp exist.
The applet will always show the alert that ppd not installed.

STEPS TO REPRODUCE
1. Install tlp and uninstall ppd
2. start plasmashell
3. open applet and see what happened

OBSERVED RESULT
Applet cannot detect if tlp is installed

EXPECTED RESULT


SOFTWARE/OS VERSIONS
Windows: no
macOS: no
(available in the Info Center app, or by running `kinfo` in a terminal window)
Linux/KDE Plasma: 6.2.3
KDE Plasma Version: 6.2.3
KDE Frameworks Version: not associated
Qt Version: not associated

ADDITIONAL INFORMATION
the MR introduce this issue:
https://invent.kde.org/plasma/powerdevil/-/merge_requests/454
fix:
https://invent.kde.org/plasma/powerdevil/-/merge_requests/461
Comment 1 Méven 2024-11-16 11:23:08 UTC
Git commit b74e26bf7a60eec0655c894eafb7a1bfb36bb3ca by Méven Car.
Committed on 16/11/2024 at 10:14.
Pushed by meven into branch 'master'.

applets: allow to detect tlp without solid or upower

Detect tlp independently of power-profiles-daemon.

M  +149  -153  applets/batterymonitor/plugin/powerprofilescontrol.cpp
M  +1    -1    applets/batterymonitor/plugin/powerprofilescontrol.h

https://invent.kde.org/plasma/powerdevil/-/commit/b74e26bf7a60eec0655c894eafb7a1bfb36bb3ca
Comment 2 Méven 2024-11-17 10:26:39 UTC
Git commit 19c49043aba60687891b1edafe28e50c73df9783 by Méven Car.
Committed on 17/11/2024 at 10:08.
Pushed by meven into branch 'Plasma/6.2'.

applets: allow to detect tlp without solid or upower

Detect tlp independently of power-profiles-daemon.
(cherry picked from commit b74e26bf7a60eec0655c894eafb7a1bfb36bb3ca)

M  +149  -153  applets/batterymonitor/plugin/powerprofilescontrol.cpp
M  +1    -1    applets/batterymonitor/plugin/powerprofilescontrol.h

https://invent.kde.org/plasma/powerdevil/-/commit/19c49043aba60687891b1edafe28e50c73df9783