applets: allow to detect tlp without solid or upower

Detect tlp independently of power-profiles-daemon.

BUG: 495918
(cherry picked from commit b74e26bf7a60eec0655c894eafb7a1bfb36bb3ca)