applets/batterymonitor/plugin/powerprofilescontrol.cpp
@@ -49,10 +49,12 @@ PowerProfilesControl::PowerProfilesControl(QObject *parent)
     connect(m_powerProfileWatcher.get(), &QDBusServiceWatcher::serviceRegistered, this, &PowerProfilesControl::onServiceRegistered);
     connect(m_powerProfileWatcher.get(), &QDBusServiceWatcher::serviceUnregistered, this, &PowerProfilesControl::onServiceUnregistered);
 
+    setTlpInstalled(!QStandardPaths::findExecutable(QStringLiteral("tlp")).isEmpty());
+
     // If it's up and running already, let's cache it
     if (QDBusConnection::sessionBus().interface()->isServiceRegistered(SOLID_POWERMANAGEMENT_SERVICE)
-        && QDBusConnection::systemBus().interface()->isServiceRegistered(UPOWER_POWERPROFILE_SERVICE)) {
-        onServiceRegistered(SOLID_POWERMANAGEMENT_SERVICE);
+        || QDBusConnection::systemBus().interface()->isServiceRegistered(UPOWER_POWERPROFILE_SERVICE)) {
+        onServiceRegistered();
     }
 }
 
@@ -60,169 +62,163 @@ PowerProfilesControl::~PowerProfilesControl()
 {
 }
 
-void PowerProfilesControl::onServiceRegistered(const QString &serviceName)
+void PowerProfilesControl::onServiceRegistered()
 {
-    if (serviceName == SOLID_POWERMANAGEMENT_SERVICE || serviceName == UPOWER_POWERPROFILE_SERVICE) {
-        if (QDBusConnection::systemBus().interface()->isServiceRegistered(UPOWER_POWERPROFILE_SERVICE)
-            && QDBusConnection::sessionBus().interface()->isServiceRegistered(SOLID_POWERMANAGEMENT_SERVICE)) {
-            QDBusMessage profileChoices = QDBusMessage::createMethodCall(SOLID_POWERMANAGEMENT_SERVICE,
-                                                                         QStringLiteral("/org/kde/Solid/PowerManagement/Actions/PowerProfile"),
-                                                                         QStringLiteral("org.kde.Solid.PowerManagement.Actions.PowerProfile"),
-                                                                         QStringLiteral("profileChoices"));
-            QDBusPendingCall profileChoicesCall = QDBusConnection::sessionBus().asyncCall(profileChoices);
-            auto profileChoicesWatcher = new QDBusPendingCallWatcher(profileChoicesCall, this);
-            connect(profileChoicesWatcher, &QDBusPendingCallWatcher::finished, this, [this](QDBusPendingCallWatcher *watcher) {
-                QDBusReply<QStringList> reply = *watcher;
+    if (QDBusConnection::systemBus().interface()->isServiceRegistered(UPOWER_POWERPROFILE_SERVICE)
+        && QDBusConnection::sessionBus().interface()->isServiceRegistered(SOLID_POWERMANAGEMENT_SERVICE)) {
+        QDBusMessage profileChoices = QDBusMessage::createMethodCall(SOLID_POWERMANAGEMENT_SERVICE,
+                                                                     QStringLiteral("/org/kde/Solid/PowerManagement/Actions/PowerProfile"),
+                                                                     QStringLiteral("org.kde.Solid.PowerManagement.Actions.PowerProfile"),
+                                                                     QStringLiteral("profileChoices"));
+        QDBusPendingCall profileChoicesCall = QDBusConnection::sessionBus().asyncCall(profileChoices);
+        auto profileChoicesWatcher = new QDBusPendingCallWatcher(profileChoicesCall, this);
+        connect(profileChoicesWatcher, &QDBusPendingCallWatcher::finished, this, [this](QDBusPendingCallWatcher *watcher) {
+            QDBusReply<QStringList> reply = *watcher;
 
-                if (reply.isValid()) {
-                    updatePowerProfileChoices(reply.value());
-                } else {
-                    qCDebug(APPLETS::BATTERYMONITOR) << "error getting profile choices";
-                }
-                watcher->deleteLater();
-            });
+            if (reply.isValid()) {
+                updatePowerProfileChoices(reply.value());
+            } else {
+                qCDebug(APPLETS::BATTERYMONITOR) << "error getting profile choices";
+            }
+            watcher->deleteLater();
+        });
 
-            QDBusMessage configuredProfile = QDBusMessage::createMethodCall(SOLID_POWERMANAGEMENT_SERVICE,
-                                                                            QStringLiteral("/org/kde/Solid/PowerManagement/Actions/PowerProfile"),
-                                                                            QStringLiteral("org.kde.Solid.PowerManagement.Actions.PowerProfile"),
-                                                                            QStringLiteral("configuredProfile"));
-            QDBusPendingCall configuredProfileCall = QDBusConnection::sessionBus().asyncCall(configuredProfile);
-            auto configuredProfileWatcher = new QDBusPendingCallWatcher(configuredProfileCall, this);
-            connect(configuredProfileWatcher, &QDBusPendingCallWatcher::finished, this, [this](QDBusPendingCallWatcher *watcher) {
-                QDBusReply<QString> reply = *watcher;
-                if (reply.isValid()) {
-                    updatePowerProfileConfiguredProfile(reply.value());
-                } else {
-                    qCDebug(APPLETS::BATTERYMONITOR) << "error getting current profile";
-                }
-                watcher->deleteLater();
-            });
+        QDBusMessage configuredProfile = QDBusMessage::createMethodCall(SOLID_POWERMANAGEMENT_SERVICE,
+                                                                        QStringLiteral("/org/kde/Solid/PowerManagement/Actions/PowerProfile"),
+                                                                        QStringLiteral("org.kde.Solid.PowerManagement.Actions.PowerProfile"),
+                                                                        QStringLiteral("configuredProfile"));
+        QDBusPendingCall configuredProfileCall = QDBusConnection::sessionBus().asyncCall(configuredProfile);
+        auto configuredProfileWatcher = new QDBusPendingCallWatcher(configuredProfileCall, this);
+        connect(configuredProfileWatcher, &QDBusPendingCallWatcher::finished, this, [this](QDBusPendingCallWatcher *watcher) {
+            QDBusReply<QString> reply = *watcher;
+            if (reply.isValid()) {
+                updatePowerProfileConfiguredProfile(reply.value());
+            } else {
+                qCDebug(APPLETS::BATTERYMONITOR) << "error getting current profile";
+            }
+            watcher->deleteLater();
+        });
 
-            QDBusMessage currentProfile = QDBusMessage::createMethodCall(SOLID_POWERMANAGEMENT_SERVICE,
-                                                                         QStringLiteral("/org/kde/Solid/PowerManagement/Actions/PowerProfile"),
-                                                                         QStringLiteral("org.kde.Solid.PowerManagement.Actions.PowerProfile"),
-                                                                         QStringLiteral("currentProfile"));
-            QDBusPendingCall currentProfileCall = QDBusConnection::sessionBus().asyncCall(currentProfile);
-            auto currentProfileWatcher = new QDBusPendingCallWatcher(currentProfileCall, this);
-            connect(currentProfileWatcher, &QDBusPendingCallWatcher::finished, this, [this](QDBusPendingCallWatcher *watcher) {
-                QDBusReply<QString> reply = *watcher;
-                if (reply.isValid()) {
-                    updatePowerProfileCurrentProfile(reply.value());
-                } else {
-                    qCDebug(APPLETS::BATTERYMONITOR) << "error getting current profile";
-                }
-                watcher->deleteLater();
-            });
+        QDBusMessage currentProfile = QDBusMessage::createMethodCall(SOLID_POWERMANAGEMENT_SERVICE,
+                                                                     QStringLiteral("/org/kde/Solid/PowerManagement/Actions/PowerProfile"),
+                                                                     QStringLiteral("org.kde.Solid.PowerManagement.Actions.PowerProfile"),
+                                                                     QStringLiteral("currentProfile"));
+        QDBusPendingCall currentProfileCall = QDBusConnection::sessionBus().asyncCall(currentProfile);
+        auto currentProfileWatcher = new QDBusPendingCallWatcher(currentProfileCall, this);
+        connect(currentProfileWatcher, &QDBusPendingCallWatcher::finished, this, [this](QDBusPendingCallWatcher *watcher) {
+            QDBusReply<QString> reply = *watcher;
+            if (reply.isValid()) {
+                updatePowerProfileCurrentProfile(reply.value());
+            } else {
+                qCDebug(APPLETS::BATTERYMONITOR) << "error getting current profile";
+            }
+            watcher->deleteLater();
+        });
 
-            QDBusMessage inhibitionReason = QDBusMessage::createMethodCall(SOLID_POWERMANAGEMENT_SERVICE,
-                                                                           QStringLiteral("/org/kde/Solid/PowerManagement/Actions/PowerProfile"),
-                                                                           QStringLiteral("org.kde.Solid.PowerManagement.Actions.PowerProfile"),
-                                                                           QStringLiteral("performanceInhibitedReason"));
-            QDBusPendingCall inhibitionReasonCall = QDBusConnection::sessionBus().asyncCall(inhibitionReason);
-            auto inhibitionReasonWatcher = new QDBusPendingCallWatcher(inhibitionReasonCall, this);
-            connect(inhibitionReasonWatcher, &QDBusPendingCallWatcher::finished, this, [this](QDBusPendingCallWatcher *watcher) {
-                QDBusReply<QString> reply;
-                if (reply.isValid()) {
-                    updatePowerProfilePerformanceInhibitedReason(reply.value());
-                } else {
-                    qCDebug(APPLETS::BATTERYMONITOR) << "error getting performance inhibited reason";
-                }
-                watcher->deleteLater();
-            });
-
-            QDBusMessage degradedReason = QDBusMessage::createMethodCall(SOLID_POWERMANAGEMENT_SERVICE,
-                                                                         QStringLiteral("/org/kde/Solid/PowerManagement/Actions/PowerProfile"),
-                                                                         QStringLiteral("org.kde.Solid.PowerManagement.Actions.PowerProfile"),
-                                                                         QStringLiteral("performanceDegradedReason"));
-            QDBusPendingCall degradedReasonCall = QDBusConnection::sessionBus().asyncCall(inhibitionReason);
-            auto degradedReasonWatcher = new QDBusPendingCallWatcher(degradedReasonCall, this);
-            connect(degradedReasonWatcher, &QDBusPendingCallWatcher::finished, this, [this](QDBusPendingCallWatcher *watcher) {
-                QDBusReply<QString> reply = *watcher;
-                if (reply.isValid()) {
-                    updatePowerProfilePerformanceDegradedReason(reply.value());
-                } else {
-                    qCDebug(APPLETS::BATTERYMONITOR) << "error getting performance inhibited reason";
-                }
-                watcher->deleteLater();
-            });
-
-            QDBusMessage profileHolds = QDBusMessage::createMethodCall(SOLID_POWERMANAGEMENT_SERVICE,
+        QDBusMessage inhibitionReason = QDBusMessage::createMethodCall(SOLID_POWERMANAGEMENT_SERVICE,
                                                                        QStringLiteral("/org/kde/Solid/PowerManagement/Actions/PowerProfile"),
                                                                        QStringLiteral("org.kde.Solid.PowerManagement.Actions.PowerProfile"),
-                                                                       QStringLiteral("profileHolds"));
-            QDBusPendingCall profileHoldsCall = QDBusConnection::sessionBus().asyncCall(profileHolds);
-            auto profileHoldsWatcher = new QDBusPendingCallWatcher(profileHoldsCall, this);
-            connect(profileHoldsWatcher, &QDBusPendingCallWatcher::finished, this, [this](QDBusPendingCallWatcher *watcher) {
-                QDBusReply<QList<QVariantMap>> reply = *watcher;
-                if (reply.isValid()) {
-                    updatePowerProfileHolds(reply.value());
-                } else {
-                    qCDebug(APPLETS::BATTERYMONITOR) << "error getting profile holds";
-                }
-                watcher->deleteLater();
-            });
-
-            if (!QDBusConnection::sessionBus().connect(SOLID_POWERMANAGEMENT_SERVICE,
-                                                       QStringLiteral("/org/kde/Solid/PowerManagement/Actions/PowerProfile"),
-                                                       QStringLiteral("org.kde.Solid.PowerManagement.Actions.PowerProfile"),
-                                                       QStringLiteral("configuredProfileChanged"),
-                                                       this,
-                                                       SLOT(updatePowerProfileConfiguredProfile(QString)))) {
-                qCDebug(APPLETS::BATTERYMONITOR) << "error connecting to current profile changes via dbus";
+                                                                       QStringLiteral("performanceInhibitedReason"));
+        QDBusPendingCall inhibitionReasonCall = QDBusConnection::sessionBus().asyncCall(inhibitionReason);
+        auto inhibitionReasonWatcher = new QDBusPendingCallWatcher(inhibitionReasonCall, this);
+        connect(inhibitionReasonWatcher, &QDBusPendingCallWatcher::finished, this, [this](QDBusPendingCallWatcher *watcher) {
+            QDBusReply<QString> reply;
+            if (reply.isValid()) {
+                updatePowerProfilePerformanceInhibitedReason(reply.value());
+            } else {
+                qCDebug(APPLETS::BATTERYMONITOR) << "error getting performance inhibited reason";
             }
+            watcher->deleteLater();
+        });
 
-            if (!QDBusConnection::sessionBus().connect(SOLID_POWERMANAGEMENT_SERVICE,
-                                                       QStringLiteral("/org/kde/Solid/PowerManagement/Actions/PowerProfile"),
-                                                       QStringLiteral("org.kde.Solid.PowerManagement.Actions.PowerProfile"),
-                                                       QStringLiteral("currentProfileChanged"),
-                                                       this,
-                                                       SLOT(updatePowerProfileCurrentProfile(QString)))) {
-                qCDebug(APPLETS::BATTERYMONITOR) << "error connecting to current profile changes via dbus";
+        QDBusMessage degradedReason = QDBusMessage::createMethodCall(SOLID_POWERMANAGEMENT_SERVICE,
+                                                                     QStringLiteral("/org/kde/Solid/PowerManagement/Actions/PowerProfile"),
+                                                                     QStringLiteral("org.kde.Solid.PowerManagement.Actions.PowerProfile"),
+                                                                     QStringLiteral("performanceDegradedReason"));
+        QDBusPendingCall degradedReasonCall = QDBusConnection::sessionBus().asyncCall(inhibitionReason);
+        auto degradedReasonWatcher = new QDBusPendingCallWatcher(degradedReasonCall, this);
+        connect(degradedReasonWatcher, &QDBusPendingCallWatcher::finished, this, [this](QDBusPendingCallWatcher *watcher) {
+            QDBusReply<QString> reply = *watcher;
+            if (reply.isValid()) {
+                updatePowerProfilePerformanceDegradedReason(reply.value());
+            } else {
+                qCDebug(APPLETS::BATTERYMONITOR) << "error getting performance inhibited reason";
             }
+            watcher->deleteLater();
+        });
 
-            if (!QDBusConnection::sessionBus().connect(SOLID_POWERMANAGEMENT_SERVICE,
-                                                       QStringLiteral("/org/kde/Solid/PowerManagement/Actions/PowerProfile"),
-                                                       QStringLiteral("org.kde.Solid.PowerManagement.Actions.PowerProfile"),
-                                                       QStringLiteral("profileChoicesChanged"),
-                                                       this,
-                                                       SLOT(updatePowerProfileChoices(QStringList)))) {
-                qCDebug(APPLETS::BATTERYMONITOR) << "error connecting to profile choices changes via dbus";
+        QDBusMessage profileHolds = QDBusMessage::createMethodCall(SOLID_POWERMANAGEMENT_SERVICE,
+                                                                   QStringLiteral("/org/kde/Solid/PowerManagement/Actions/PowerProfile"),
+                                                                   QStringLiteral("org.kde.Solid.PowerManagement.Actions.PowerProfile"),
+                                                                   QStringLiteral("profileHolds"));
+        QDBusPendingCall profileHoldsCall = QDBusConnection::sessionBus().asyncCall(profileHolds);
+        auto profileHoldsWatcher = new QDBusPendingCallWatcher(profileHoldsCall, this);
+        connect(profileHoldsWatcher, &QDBusPendingCallWatcher::finished, this, [this](QDBusPendingCallWatcher *watcher) {
+            QDBusReply<QList<QVariantMap>> reply = *watcher;
+            if (reply.isValid()) {
+                updatePowerProfileHolds(reply.value());
+            } else {
+                qCDebug(APPLETS::BATTERYMONITOR) << "error getting profile holds";
             }
+            watcher->deleteLater();
+        });
 
-            if (!QDBusConnection::sessionBus().connect(SOLID_POWERMANAGEMENT_SERVICE,
-                                                       QStringLiteral("/org/kde/Solid/PowerManagement/Actions/PowerProfile"),
-                                                       QStringLiteral("org.kde.Solid.PowerManagement.Actions.PowerProfile"),
-                                                       QStringLiteral("performanceInhibitedReasonChanged"),
-                                                       this,
-                                                       SLOT(updatePowerProfilePerformanceInhibitedReason(QString)))) {
-                qCDebug(APPLETS::BATTERYMONITOR) << "error connecting to inhibition reason changes via dbus";
-            }
-
-            if (!QDBusConnection::sessionBus().connect(SOLID_POWERMANAGEMENT_SERVICE,
-                                                       QStringLiteral("/org/kde/Solid/PowerManagement/Actions/PowerProfile"),
-                                                       QStringLiteral("org.kde.Solid.PowerManagement.Actions.PowerProfile"),
-                                                       QStringLiteral("performanceDegradedReasonChanged"),
-                                                       this,
-                                                       SLOT(updatePowerProfilePerformanceDegradedReason(QString)))) {
-                qCDebug(APPLETS::BATTERYMONITOR) << "error connecting to degradation reason changes via dbus";
-            }
-
-            if (!QDBusConnection::sessionBus().connect(SOLID_POWERMANAGEMENT_SERVICE,
-                                                       QStringLiteral("/org/kde/Solid/PowerManagement/Actions/PowerProfile"),
-                                                       QStringLiteral("org.kde.Solid.PowerManagement.Actions.PowerProfile"),
-                                                       QStringLiteral("profileHoldsChanged"),
-                                                       this,
-                                                       SLOT(updatePowerProfileHolds(QList<QVariantMap>)))) {
-                qCDebug(APPLETS::BATTERYMONITOR) << "error connecting to profile hold changes via dbus";
-            }
-
-            m_isPowerProfileDaemonInstalled = true;
-            Q_EMIT isPowerProfileDaemonInstalledChanged(true);
-
-            setTlpInstalled(false);
-        } else {
-            setTlpInstalled(!QStandardPaths::findExecutable(QStringLiteral("tlp")).isEmpty());
+        if (!QDBusConnection::sessionBus().connect(SOLID_POWERMANAGEMENT_SERVICE,
+                                                   QStringLiteral("/org/kde/Solid/PowerManagement/Actions/PowerProfile"),
+                                                   QStringLiteral("org.kde.Solid.PowerManagement.Actions.PowerProfile"),
+                                                   QStringLiteral("configuredProfileChanged"),
+                                                   this,
+                                                   SLOT(updatePowerProfileConfiguredProfile(QString)))) {
+            qCDebug(APPLETS::BATTERYMONITOR) << "error connecting to current profile changes via dbus";
         }
+
+        if (!QDBusConnection::sessionBus().connect(SOLID_POWERMANAGEMENT_SERVICE,
+                                                   QStringLiteral("/org/kde/Solid/PowerManagement/Actions/PowerProfile"),
+                                                   QStringLiteral("org.kde.Solid.PowerManagement.Actions.PowerProfile"),
+                                                   QStringLiteral("currentProfileChanged"),
+                                                   this,
+                                                   SLOT(updatePowerProfileCurrentProfile(QString)))) {
+            qCDebug(APPLETS::BATTERYMONITOR) << "error connecting to current profile changes via dbus";
+        }
+
+        if (!QDBusConnection::sessionBus().connect(SOLID_POWERMANAGEMENT_SERVICE,
+                                                   QStringLiteral("/org/kde/Solid/PowerManagement/Actions/PowerProfile"),
+                                                   QStringLiteral("org.kde.Solid.PowerManagement.Actions.PowerProfile"),
+                                                   QStringLiteral("profileChoicesChanged"),
+                                                   this,
+                                                   SLOT(updatePowerProfileChoices(QStringList)))) {
+            qCDebug(APPLETS::BATTERYMONITOR) << "error connecting to profile choices changes via dbus";
+        }
+
+        if (!QDBusConnection::sessionBus().connect(SOLID_POWERMANAGEMENT_SERVICE,
+                                                   QStringLiteral("/org/kde/Solid/PowerManagement/Actions/PowerProfile"),
+                                                   QStringLiteral("org.kde.Solid.PowerManagement.Actions.PowerProfile"),
+                                                   QStringLiteral("performanceInhibitedReasonChanged"),
+                                                   this,
+                                                   SLOT(updatePowerProfilePerformanceInhibitedReason(QString)))) {
+            qCDebug(APPLETS::BATTERYMONITOR) << "error connecting to inhibition reason changes via dbus";
+        }
+
+        if (!QDBusConnection::sessionBus().connect(SOLID_POWERMANAGEMENT_SERVICE,
+                                                   QStringLiteral("/org/kde/Solid/PowerManagement/Actions/PowerProfile"),
+                                                   QStringLiteral("org.kde.Solid.PowerManagement.Actions.PowerProfile"),
+                                                   QStringLiteral("performanceDegradedReasonChanged"),
+                                                   this,
+                                                   SLOT(updatePowerProfilePerformanceDegradedReason(QString)))) {
+            qCDebug(APPLETS::BATTERYMONITOR) << "error connecting to degradation reason changes via dbus";
+        }
+
+        if (!QDBusConnection::sessionBus().connect(SOLID_POWERMANAGEMENT_SERVICE,
+                                                   QStringLiteral("/org/kde/Solid/PowerManagement/Actions/PowerProfile"),
+                                                   QStringLiteral("org.kde.Solid.PowerManagement.Actions.PowerProfile"),
+                                                   QStringLiteral("profileHoldsChanged"),
+                                                   this,
+                                                   SLOT(updatePowerProfileHolds(QList<QVariantMap>)))) {
+            qCDebug(APPLETS::BATTERYMONITOR) << "error connecting to profile hold changes via dbus";
+        }
+
+        m_isPowerProfileDaemonInstalled = true;
+        Q_EMIT isPowerProfileDaemonInstalledChanged(true);
     }
 }
 
